# cs100finalproject

./: .gitignore  CMakeLists.txt  README.md  battle.cpp  battle.hpp  battletest.hpp  main.cpp  move.cpp  move.hpp  movetest.hpp  pokemon.cpp  pokemon.hpp  pokemontest.hpp  test.cpp  trainer.cpp  trainer.hpp  trainertest.hpp  type.cpp  type.hpp  typetest.hpp
